--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html, body {
 .menu-ui {
   background:#fff;
   position:absolute;
-  top:60px;right:3%;
+  top:3% ;right:3%;
   z-index:1;
   width:190px;
   }
